fix(app) : clean z-index

--- a/src/app/shared/components/signup-modal/signup-modal.component.scss
+++ b/src/app/shared/components/signup-modal/signup-modal.component.scss
@@ -5,7 +5,7 @@
 @import '../../../../assets/scss/hyperlink';
 .cModal {
   position: fixed;
-  z-index: $modal-authent-z-index;
+  z-index: $modal-z-index;
   top: 0;
   right: 0;
   bottom: 0;
